--- a/static/css.css
+++ b/static/css.css
@@ -15,7 +15,10 @@ h3 {font-size:16px;}
 .primary, .primary a {color:#62ab00;}
 .secondary, .secondary a {color:#528e00;}
 .featured, .featured a  {color:#ff6600;}
-.quote, .quote a {color:#888;}
+.normal,   .normal   a  {color:#333;}
+blockquote, blockquote a, .quote, .quote a {color:#888;}
+
+
 
 .bold { font-weight:bold; }
 .deletion { text-decoration: line-through; color: #888;}
@@ -27,14 +30,15 @@ h3 {font-size:16px;}
 .f18 { font-size: 18px; }
 .f22 { font-size: 22px; }
 .f26 { font-size: 26px; }
+.f36 { font-size: 36px; }
 
-.l15 { line-height: 18px; }
-.l2  { line-height: 24px;   }
-.l25 { line-height: 30px; }
-.l3  { line-height: 36px;   }
-.l4  { line-height: 48px;   }
-.l5  { line-height: 60px;   }
-.l6  { line-height: 72px;   }
+.l15 { line-height: 1.5; }
+.l2  { line-height: 2;   }
+.l25 { line-height: 2.5; }
+.l3  { line-height: 3;   }
+.l4  { line-height: 4;   }
+.l5  { line-height: 5;   }
+.l6  { line-height: 6;   }
 
 .c-ptr { cursor: pointer; }
 .c-def { cursor: default; }
@@ -60,6 +64,8 @@ i,.icon { display:inline-block; vertical-align: middle; background-repeat: no-re
 .icon-arrow-right-large { background-image: url(./images/icons/arrow-right-large.png); width:60px; height:90px; }
 .icon-eye { background-image: url(./images/icons/eye.png); width:22px; height:11px; }
 .icon-pop { background-image: url(./images/icons/pop.png); width:50px; height:20px; }
+.icon-comment { background-image: url(./images/icons/comment.png); width:14px; height:14px; }
+
 
 .submit {cursor:pointer;}
 
@@ -72,6 +78,9 @@ p{margin:0;}
 
 .left-490-10 {float:left; width:490px;}
 .right-500   {margin-left:500px;width:500px;}
+
+.triple-320-20 { float:left; width: 320px; margin-right: 20px; }
+.triple-320-20-last { margin-right: 0; }
 
 .left-670-30 { float:left; width:670px;}
 .right-300 { margin-left:700px; width:300px;}
@@ -90,7 +99,10 @@ p{margin:0;}
 .right-570  {margin-left:430px; width: 570px;}
 
 .left-610-30 { float:left; width:610px;}
-.right-260 { margin-left:640; width: 260px; }
+.right-360 { margin-left:640px; width: 360px; }
+
+.left-690-30 { float:left; width: 690px; }
+.right-280   { margin-left: 720px; width: 280px; }
 
 /* Framework */
 #top { font-size: 14px; height: 40px; line-height:40px; background-color:#f6f6f6; border-bottom: 1px solid #ddd;}
@@ -175,17 +187,37 @@ p{margin:0;}
 .block .hd .more { float: right; }
 .block .ft { text-align: right; }
 
-.block:after{content:".";display:block;height:0;clear:both;visibility:hidden}
-.block{*+height:1%;}
+.block:after,
+.block .hd:after,
+.block .bd:after,
+.block .ft:after{content:".";display:block;height:0;clear:both;visibility:hidden}
+
+.block,
+.block .hd,
+.block .bd,
+.block .ft{*+height:1%;}
+
+.block-bordered{border:1px solid #ddd;}
+.block-boundless{padding:0;}
+.block-boundless .hd{padding-bottom:0;}
 
 .block .hd h1{color:#62ab00;}
 .block .hd h2{color:#62ab00;}
 .block .hd h3{color:#62ab00;}
 
-.block-bordered{border:1px solid #ddd;}
-.block-boundless{padding:0;}
-.block-boundless .hd{padding-bottom:0;}
-.hd-bordered{border-bottom:1px solid #62ab00;}
+.block .hd-style-1 { border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd; line-height: 48px; font-size: 16px; color: #333;}
+.block .hd-style-1 a { font-size: 16px; }
+.block .hd-style-1 h1 { color: #333; }
+.block .hd-style-2 { border-bottom: 1px solid #ddd; line-height: 48px; font-size: 16px; color: #333;}
+.block .hd-style-2 a {font-size: 16px;}
+.block .hd-style-2 h1 { color: #333; }
+
+.block .hd-bordered{ border-bottom:1px solid #62ab00; }
+
+.block .hd-switch ul li { float:left; text-align:center; font-size:16px; width: 100px; border-bottom: 3px solid #fff;}
+.block .hd-switch ul li.active   { border-color: #62ab00; }
+.block .hd-switch ul li.hover  a { color: #62ab00; }
+.block .hd-switch ul li.active a { color: #62ab00; }
 
 .btn { font-size: 16px; display:inline-block; background-color:#62ab00; color:#fff; line-height:24px;text-align:center; width: 72px;}
 .btn:hover { background-color:#528e00; color: #fff;}
@@ -207,7 +239,7 @@ p{margin:0;}
 #page-index .headlines {padding:0;}
 #page-index .headlines .bd { height:160px;background: url(./images/index/headlines.png) no-repeat 0 0;padding-left:32px; }
 #page-index .headlines .headline {margin-left: 12px;padding-bottom: 9px; margin-bottom:9px;}
-#page-index .headlines .headline p{font-size:13px;}
+#page-index .headlines .headline p{font-size:13px; height: 26px; line-height: 2; overflow: hidden;}
 #page-index .headlines .first-headline {border-bottom:1px dotted #ccc;}
 #page-index .headlines .headline h1{font-size: 30px; font-weight: bold; height: 45px; overflow:hidden; }
 
@@ -288,10 +320,11 @@ p{margin:0;}
 #page-index .deliveries .bd ul li { line-height:30px; }
 #page-index .deliveries .bd ul li.pic { margin-bottom: 24px; }
 #page-index .deliveries .bd ul li .price { color: #62ab00; }
-#page-index .deliveries .bd ul li dl { overflow:hidden; }
+#page-index .deliveries .bd ul li dl { overflow:hidden; border-bottom: 1px solid #fff;}
 #page-index .deliveries .bd ul li dd { float:right; }
-#page-index .deliveries .bd ul li dt { margin-right: 160px; }
-#page-index .deliveries .bd ul li dl.active { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
+#page-index .deliveries .bd ul li dt { margin-right: 120px; }
+#page-index .deliveries .bd ul li dl.active,
+#page-index .deliveries .bd ul li dl.hover { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
 
 #page-index .lands .hd { line-height: 45px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #page-index .lands .bd { padding: 18px 0; }
@@ -305,9 +338,10 @@ p{margin:0;}
 #page-index .opens .bd { padding: 18px 0; }
 #page-index .opens .bd ul li { line-height:30px; }
 #page-index .opens .bd ul li.pic { margin-bottom: 24px; }
-#page-index .opens .bd ul li dl { overflow:hidden; }
+#page-index .opens .bd ul li dl { overflow:hidden; border-bottom: 1px solid #fff;}
 #page-index .opens .bd ul li dd { float:right; }
-#page-index .opens .bd ul li dt { margin-right: 160px; }
+#page-index .opens .bd ul li dt { margin-right: 120px; }
+#page-index .opens .bd ul li dl.hover,
 #page-index .opens .bd ul li dl.active { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
 
 #page-newhouse-index .block-areas .hd { height: 45px; line-height: 45px; border-top: 1px solid #62ab00; }
@@ -347,9 +381,40 @@ p{margin:0;}
 #page-newhouse-list .block-list .item.hover { background-color:#f6f6f6; }
 
 #page-news-index .block-news-focus .hd { height: 45px; line-height: 48px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd; }
-#page-news-index .block-news-focus .bd h2 { margin:24px 0 12px 0; }
+#page-news-index .block-news-focus .bd h2 { margin:12px 0 12px 0; }
 #page-news-index .block-news-focus .bd blockquote { padding-bottom: 24px; margin-bottom: 24px; border-bottom: 1px dotted #888; } 
 #page-news-index .block-news-focus .bd ul li { line-height: 30px;}
+
+#page-news-index .block-news-list .bd li{ padding-bottom: 13px; padding-right: 13px;}
+#page-news-index .block-news-list .bd li.news { border-bottom: 1px dotted #ddd; }
+#page-news-index .block-news-list .bd li.hover { background-color: #f6f6f6; }
+#page-news-index .block-news-list .bd li.hover h1 a{ color: #62ab00; }
+#page-news-index .block-news-list .bd li dl dt { float:left; width: 200px; }
+#page-news-index .block-news-list .bd li dl dd { margin-left: 220px; }
+#page-news-index .block-news-list .bd li blockquote { height: 56px; overflow:hidden; margin-bottom: 13px; }
+#page-news-index .block-news-list .bd li abbr { color: #888; }
+#page-news-index .block-news-list .bd li abbr a { color: #62ab00;}
+#page-news-index .block-news-list .bd li abbr .left { float:left; } 
+#page-news-index .block-news-list .bd li abbr .right { float:right; border-top: 1px solid #ddd; width: 80px; } 
+
+#page-news-detail-index .right-280 .block { margin-top: 30px; }
+#page-news-detail-index .right-280 .block .hd h1 { font-size: 18px; }
+#page-news-detail-index .right-280 .block .hd .more a{font-size: 14px; color: #888;}
+#page-news-detail-index .right-280 .block .bd dl { width: 130px; }
+#page-news-detail-index .right-280 .block .bd dl dt img { width: 130px; height: 73px; }
+
+#page-news-detail-index .block-news-detail { border: 1px solid #ddd; padding: 20px 40px; }
+#page-news-detail-index .block-news-detail .bd .meta { border-bottom: 1px dotted #ddd; line-height: 48px;}
+#page-news-detail-index .block-news-detail .bd .introduction { margin-top: 30px; font-size: 16px; padding: 20px; background-color: #f6f6f6; border-left: 10px solid #666; }
+#page-news-detail-index .block-news-detail .bd .remark { padding: 20px 0;}
+#page-news-detail-index .block-news-detail .bd .font-fixer a { color: #333; }
+#page-news-detail-index .block-news-detail .bd .content { font-size: 16px; line-height: 2; padding: 30px 0 10px 0; }
+#page-news-detail-index .block-news-detail .bd .tags { padding: 20px 0; border-bottom: 1px dotted #ddd; }
+#page-news-detail-index .block-news-detail .bd .tags .tag { color: #62ab00; }
+
+#page-news-detail-index .block-news-sole-single .bd {position:relative;}
+#page-news-detail-index .block-news-sole-single .bd .mark{ line-height: 2;padding: 0 13px; color: #fff;background-color: #62ab00;position:absolute;top: 20px; right: 0; }
+#page-news-detail-index .block-news-sole-single .bd blockquote { margin-top: 13px; }
 
 #page-groupbuy-index .block-groupbuy-jumbotron { position: relative; overflow: visible; }
 #page-groupbuy-index .block-groupbuy-jumbotron .icon-arrow-left-large{ position: absolute; left: -70px; top: 100px; }
@@ -365,7 +430,7 @@ p{margin:0;}
 #page-groupbuy-index .block-groupbuy-new .hd { line-height: 45px; } 
 #page-groupbuy-index .block-groupbuy-new .bd .groupbuy { float:left; padding: 10px; border: 1px solid #ddd; width: 298px; margin-right: 20px; margin-bottom: 20px; } 
 #page-groupbuy-index .block-groupbuy-new .bd .groupbuy-last { margin-right: 0; } 
-#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image { position: relative; height: 155px; }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image { position: relative; height: 162px; }
 #page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image .mark  { display:none; height: 24px; line-height: 24px; color: #fff; position:absolute;bottom: 0; left: 0; right: 0;}
 #page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image .price { font-size: 16px; height: 24px; line-height: 24px; color: #fff; position:absolute;bottom: 0; left: 0; right: 0; }
 #page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image .mask  { font-size: 16px; height: 24px; line-height: 24px; background-color: #ff6600; color: #fff; position:absolute;bottom: 0; left: 0; right: 0; filter:alpha(opacity=50);-moz-opacity:0.5;-khtml-opacity: 0.5;opacity: 0.5; }
@@ -423,35 +488,44 @@ p{margin:0;}
 #page-newhouse-picture-index .block-newhouse-pictures .bd dl dt { margin-bottom: 20px; }
 #page-newhouse-picture-index .block-newhouse-pictures .bd ul li { float: left; margin-bottom: 25px; margin-right: 25px;}
 #page-newhouse-picture-index .block-newhouse-pictures .bd ul li.last { margin-right: 0; }
+
 /*Blocks*/
 #block-newhouse-focus .hd { line-height: 45px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #block-newhouse-focus .bd { padding: 18px 0 0 0; }
 #block-newhouse-focus .bd ul li { line-height: 31px; }
+#block-newhouse-focus .bd ul li.pic img { width: 100% }
 #block-newhouse-focus .bd ul li .price { color: #62ab00; }
-#block-newhouse-focus .bd ul li dl { overflow:hidden; }
+#block-newhouse-focus .bd ul li dl { overflow:hidden; border-bottom: 1px solid #fff;}
 #block-newhouse-focus .bd ul li dd { float:right; }
-#block-newhouse-focus .bd ul li dl.active { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
+#block-newhouse-focus .bd ul li dl.hover,
+#block-newhouse-focus .bd ul li dl.active  { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
 
 #block-newhouse-recommends .hd { line-height: 45px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #block-newhouse-recommends .bd { padding: 18px 0 0 0; }
 #block-newhouse-recommends .bd ul li { line-height: 31px; }
+#block-newhouse-recommends .bd ul li.pic img { width: 100% }
 #block-newhouse-recommends .bd ul li .price { color: #62ab00; }
-#block-newhouse-recommends .bd ul li dl { overflow:hidden; }
+#block-newhouse-recommends .bd ul li dl { overflow:hidden; border-bottom: 1px solid #fff;}
 #block-newhouse-recommends .bd ul li dd { float:right; }
+#block-newhouse-recommends .bd ul li dl.hover,
 #block-newhouse-recommends .bd ul li dl.active { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
 
 #block-newhouse-deliveries .hd { line-height: 45px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #block-newhouse-deliveries .bd { padding: 18px 0 0 0; }
 #block-newhouse-deliveries .bd ul li { line-height:30px; }
-#block-newhouse-deliveries .bd ul li dl { overflow:hidden; }
+#block-newhouse-deliveries .bd ul li.pic img { width: 100% }
+#block-newhouse-deliveries .bd ul li dl { overflow:hidden; border-bottom: 1px solid #fff;}
 #block-newhouse-deliveries .bd ul li dd { float:right; }
+#block-newhouse-deliveries .bd ul li dl.hover,
 #block-newhouse-deliveries .bd ul li dl.active { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
 
 #block-newhouse-opens .hd { line-height: 45px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #block-newhouse-opens .bd { padding: 18px 0 0 0; }
 #block-newhouse-opens .bd ul li { line-height:30px; }
-#block-newhouse-opens .bd ul li dl { overflow:hidden; }
+#block-newhouse-opens .bd ul li.pic img { width: 100% }
+#block-newhouse-opens .bd ul li dl { overflow:hidden; border-bottom: 1px solid #fff;}
 #block-newhouse-opens .bd ul li dd { float:right; }
+#block-newhouse-opens .bd ul li dl.hover,
 #block-newhouse-opens .bd ul li dl.active { font-size: 15px; font-weight:bold; border-bottom: 1px solid #ddd;}
 
 #block-links { padding: 12px 30px; }
@@ -469,13 +543,38 @@ p{margin:0;}
 #block-newhouse-quick-search .letters { margin-top: 12px; }
 #block-newhouse-quick-search .letters dt { background: url(/images/newhouse/letters.png) 0 0 no-repeat; color: #fff; width: 80px; text-align: center;}
 #block-newhouse-quick-search .letters dd { margin-left: 75px; }
-#block-newhouse-quick-search .letters li { margin-right: 3px; background-color: #62ab00; width: 24px; text-align: center;}
-#block-newhouse-quick-search .letters li a { color: #fff;}
-#block-newhouse-quick-search .letters li.hover { background-color: #333; }
-#block-newhouse-quick-search .letters li.active{ background-color: #333; }
+#block-newhouse-quick-search .letters li { margin-right: 3px; border: 1px solid #62ab00; width: 26px; text-align: center;}
+#block-newhouse-quick-search .letters li a { color: #62ab00;}
+#block-newhouse-quick-search .letters li.disabled { color: #ddd; border-color: #ddd; }
+#block-newhouse-quick-search .letters li.disabled a{ color: #ddd; }
+#block-newhouse-quick-search .letters li.hover { background-color: #62ab00;  }
+#block-newhouse-quick-search .letters li.hover a{ color: #fff;  }
+#block-newhouse-quick-search .letters li.active{ background-color: #62ab00; }
+#block-newhouse-quick-search .letters li.active a{ color: #fff; }
 
 #block-buyer-guide .hd { border-bottom: 1px solid #62ab00; margin-bottom: 24px;}
 #block-buyer-guide .guide{ border: 1px solid #ddd; text-align:center; float: left; width: 120px; height: 140px; line-height: 2;}
 #block-buyer-guide .guide{ margin: 0 16px 16px 0; }
 #block-buyer-guide .guide-last { margin-right: 0; }
 #block-buyer-guide .guide.hover{ border-color: #62ab00; }
+
+#block-news-view .bd { margin-top: 20px;}
+#block-news-view .bd dl { float: left; width:150px; margin-right: 20px;}
+#block-news-view .bd dl.last { margin-right: 0; }
+
+#block-news-leader .bd { margin-top: 20px;}
+#block-news-leader .bd dl { float: left; width:150px; margin-right: 20px;}
+#block-news-leader .bd dl.last { margin-right: 0; }
+
+#block-news-special .bd { margin-top: 20px;}
+#block-news-special .bd dl { float: left; width:150px; margin-right: 20px;}
+#block-news-special .bd dl.last { margin-right: 0; }
+
+#block-news-data .bd { margin-top: 20px;}
+#block-news-data .bd dl { float: left; width:150px; margin-right: 20px;}
+#block-news-data .bd dl.last { margin-right: 0; }
+
+#block-news-sole .bd { margin-top: 20px;}
+#block-news-sole .bd dl { float: left; width:150px; margin-right: 20px;}
+#block-news-sole .bd dl.last { margin-right: 0; }
+
