--- a/templates/groupbuy-index.tmpl
+++ b/templates/groupbuy-index.tmpl
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 {{template "lib"}}
+{{set . "HTMLComponent" "groupbuy"}}
 {{set . "HTMLTitle" "团购"}}
 {{template "head" .}}
-<body>
+<body id='page-groupbuy-index'>
 
 	{{template "top" .}}
 	
@@ -21,42 +22,54 @@
 		</div>
 	</div>
 	
-	<div id='page-groupbuy-index'>
+	<div>
 		<div id='bd'>
 			<div class='section'>
-				<div class='block-groupbuy-jumbotron block block-boundless'>
-					<a href='#'><i class='icon-arrow-left-large'></i></a>
-					<a href='#'><i class='icon-arrow-right-large'></i></a>
+			
+				<div id='group-recommends' class='block-groupbuy-jumbotron block block-boundless'>
+				
+					<a class='prev' href='javascript:void(0)'><i class='icon-arrow-left-large'></i></a>
+					<a class='next' href='javascript:void(0)'><i class='icon-arrow-right-large'></i></a>
+					
 					<div class='bd clearfix'>
-						<div class='image'>
-							<a href='#'><img src='/images/groupbuy/sample.jpg' /></a>
-						</div>
-						<div class='description'>
-						
-							<h1><b>万科·海上传奇</b></h1>
-							<h3>城南新商圈核心，配套成熟，低密度...</h3>
+						{{range $i, $v := slice .GroupbuyRecommends 0 3}}
+						<div class='clickable groupbuy clearfix' style='{{if gt $i 0 }}display:none;{{end}}'>
+							<div class='image'>
+								{{if and .Cover .Cover.Big }} <img width=660 height=371 src='{{.Cover.Big.Path}}' /> {{end}}
+							</div>
+							<div class='description'>
 							
-							<blockquote class='f13'>
-								万科·海上传奇起价4780，均价5380，嘉兴城南惊现"4字头"，击穿房价地板。
-								据悉，现场样板区已全面开放，绿化景观、样板房可实地切身体验，项目位于中环南路与城南路交叉口。
-							</blockquote>
-							
-							<p class='featured f26'>存5万抵25万火爆抢筹</p>
-							<p class='f16 l3'>
-								参团人数 <span class='featured'>250</span>人
-								&nbsp;&nbsp;<a class='btn btn-featured btn-small' style='font-size: 13px;'>立刻参加</a>
-							</p>
-							<p class='f16 l3'>
-								距活动截止还剩
-								<span class='f18 featured'> 48小时25分50秒</span>
-							</p>
+								<h1><a href='/newhouse/o{{.Id}}.html'><b>{{.Name}}</b></a></h1>
+								<h3>
+									{{if .Features}}{{join (slice .Features 0 3) "，"}}
+									{{if gt (len .Features) 3}}...{{end}}
+									{{end}}
+								</h3>
+								
+								{{if .Brief}}
+								<blockquote class='f13'>
+									{{.Brief}}
+								</blockquote>
+								{{end}}
+								
+								<p class='featured f26'>{{.GroupDescription}}</p>
+								<p class='f16 l3'>
+									参团人数 <span class='featured'>{{.NGroup}}</span> 人
+									&nbsp;&nbsp;<a class='btn btn-featured btn-small' style='font-size: 13px;'>立刻参加</a>
+								</p>
+								<p class='f16 l3'>
+									团购截止
+									<span class='f18 featured'> {{.SGroupRemain}}</span>
+								</p>
+							</div>
 						</div>
+						{{end}}
 					</div>
 					<div class='ft'>
 						<ul>
-							<li><a href='#'><i class='icon-square'></i></a></li>
-							<li><a href='#'><i class='icon-square-gray'></i></a></li>
-							<li><a href='#'><i class='icon-square-gray'></i></a></li>
+							<li data-target='0'><a href='javascript:void(0)'><i class='icon-square'></i></a></li>
+							<li data-target='1'><a href='javascript:void(0)'><i class='icon-square-gray'></i></a></li>
+							<li data-target='2'><a href='javascript:void(0)'><i class='icon-square-gray'></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -68,72 +81,44 @@
 						<h1 style='color: #000;'>最新团购</h1>
 					</div>
 					<div class='bd'>
-						<div class='groupbuy hoverable'>
+					
+						{{range $i, $v :=  slice .GroupbuyNewest 0 6}}
+						<div class='groupbuy {{if eq (mod $i 3) 2}}groupbuy-last{{end}} hoverable clickable'>
 							<div class='image'>
-								<img src='/images/groupbuy/sample-groupbuy.jpg' />
+								{{if and .Cover .Cover.Palm }}<img width=298 height=162 src='{{.Cover.Palm.Path}}' />{{end}}
 								<div class='mask'></div>
 								<div class='mark'>房团网特惠</div>
 								<div class='price'>
-									&nbsp;&nbsp;&nbsp;&nbsp;均价5300元/㎡
+									&nbsp;&nbsp;&nbsp;&nbsp;均价{{.GroupPrice}}元/㎡
 								</div>
 							</div>
 							
 							<div class='description'>
 							
 								<dl class='clearfix l3'>
-									<dt><h2><a href='#'><b>万科·海上传奇</b></a></h2></dt>
+									<dt><h2><a href='/newhouse/o{{.Id}}.html'><b>{{.Name}}</b></a></h2></dt>
 									<dd class='f16'>
-										参团人数 <span class='featured'>250</span> 人
+										参团人数 <span class='featured'>{{.NGroup}}</span> 人
 									</dd>
 								</dl>
 								
 								<dl class='clearfix f14 l2'>
-									<dt>市场价：6268元/平</dt>
+									<dt>市场价：{{.Price}} 元/㎡</dt>
 									<dd class='f16'>
 									</dd>
 								</dl>
 								
 								<dl class='clearfix'>
-									<dt class='f16 featured l2'>5300元/㎡</dt>
+									<dt class='f16 featured l2'>{{.GroupDescription}}</dt>
 									<dd class='f16 l2'>
-										<a class='btn btn-featured btn-small' href='#'>立刻参加</a>
+										<a class='btn btn-featured btn-small' href='javascript:void(0)'>立刻参加</a>
 									</dd>
 								</dl>
 							</div>
 						</div>
-						<div class='groupbuy hoverable'>
-							<div class='image'>
-								<img src='/images/groupbuy/sample-groupbuy.jpg' />
-								<div class='mask'></div>
-								<div class='mark'>房团网特惠</div>
-								<div class='price'>
-									&nbsp;&nbsp;&nbsp;&nbsp;均价5300元/㎡
-								</div>
-							</div>
-							
-							<div class='description'>
-							
-								<dl class='clearfix l3'>
-									<dt><h2><a href='#'><b>万科·海上传奇</b></a></h2></dt>
-									<dd class='f16'>
-										参团人数 <span class='featured'>250</span> 人
-									</dd>
-								</dl>
-								
-								<dl class='clearfix f14 l2'>
-									<dt>市场价：6268元/平</dt>
-									<dd class='f16'>
-									</dd>
-								</dl>
-								
-								<dl class='clearfix'>
-									<dt class='f16 featured l2'>5300元/㎡</dt>
-									<dd class='f16 l2'>
-										<a class='btn btn-featured btn-small' href='#'>立刻参加</a>
-									</dd>
-								</dl>
-							</div>
-						</div>
+						{{end}}
+						
+						<!-- 
 						<div class='groupbuy groupbuy-last hoverable'>
 							<div class='image'>
 								<img src='/images/groupbuy/sample-groupbuy.jpg' />
@@ -167,105 +152,7 @@
 								</dl>
 							</div>
 						</div>
-						<div class='groupbuy hoverable'>
-							<div class='image'>
-								<img src='/images/groupbuy/sample-groupbuy.jpg' />
-								<div class='mask'></div>
-								<div class='mark'>房团网特惠</div>
-								<div class='price'>
-									&nbsp;&nbsp;&nbsp;&nbsp;均价5300元/㎡
-								</div>
-							</div>
-							
-							<div class='description'>
-							
-								<dl class='clearfix l3'>
-									<dt><h2><a href='#'><b>万科·海上传奇</b></a></h2></dt>
-									<dd class='f16'>
-										参团人数 <span class='featured'>250</span> 人
-									</dd>
-								</dl>
-								
-								<dl class='clearfix f14 l2'>
-									<dt>市场价：6268元/平</dt>
-									<dd class='f16'>
-									</dd>
-								</dl>
-								
-								<dl class='clearfix'>
-									<dt class='f16 featured l2'>5300元/㎡</dt>
-									<dd class='f16 l2'>
-										<a class='btn btn-featured btn-small' href='#'>立刻参加</a>
-									</dd>
-								</dl>
-							</div>
-						</div>
-						<div class='groupbuy hoverable'>
-							<div class='image'>
-								<img src='/images/groupbuy/sample-groupbuy.jpg' />
-								<div class='mask'></div>
-								<div class='mark'>房团网特惠</div>
-								<div class='price'>
-									&nbsp;&nbsp;&nbsp;&nbsp;均价5300元/㎡
-								</div>
-							</div>
-							
-							<div class='description'>
-							
-								<dl class='clearfix l3'>
-									<dt><h2><a href='#'><b>万科·海上传奇</b></a></h2></dt>
-									<dd class='f16'>
-										参团人数 <span class='featured'>250</span> 人
-									</dd>
-								</dl>
-								
-								<dl class='clearfix f14 l2'>
-									<dt>市场价：6268元/平</dt>
-									<dd class='f16'>
-									</dd>
-								</dl>
-								
-								<dl class='clearfix'>
-									<dt class='f16 featured l2'>5300元/㎡</dt>
-									<dd class='f16 l2'>
-										<a class='btn btn-featured btn-small' href='#'>立刻参加</a>
-									</dd>
-								</dl>
-							</div>
-						</div>
-						<div class='groupbuy groupbuy-last hoverable'>
-							<div class='image'>
-								<img src='/images/groupbuy/sample-groupbuy.jpg' />
-								<div class='mask'></div>
-								<div class='mark'>房团网特惠</div>
-								<div class='price'>
-									&nbsp;&nbsp;&nbsp;&nbsp;均价5300元/㎡
-								</div>
-							</div>
-							
-							<div class='description'>
-							
-								<dl class='clearfix l3'>
-									<dt><h2><a href='#'><b>万科·海上传奇</b></a></h2></dt>
-									<dd class='f16'>
-										参团人数 <span class='featured'>250</span> 人
-									</dd>
-								</dl>
-								
-								<dl class='clearfix f14 l2'>
-									<dt>市场价：6268元/平</dt>
-									<dd class='f16'>
-									</dd>
-								</dl>
-								
-								<dl class='clearfix'>
-									<dt class='f16 featured l2'>5300元/㎡</dt>
-									<dd class='f16 l2'>
-										<a class='btn btn-featured btn-small' href='#'>立刻参加</a>
-									</dd>
-								</dl>
-							</div>
-						</div>
+						 -->
 					</div>
 				</div>
 			</div>
@@ -273,6 +160,66 @@
 	</div>
 	
 	{{template "ft" .}}
-	
+	<script type="text/javascript">
+		$(function(){
+			
+			$(".block-groupbuy-jumbotron").each(function(){
+				
+				var that = this;
+				
+				$(that).find(".ft li").click(function(){
+					
+					$(that).find(".ft li i.icon-square").removeClass("icon-square").addClass("icon-square-gray")
+					$(this).find("i").removeClass("icon-square-gray").addClass("icon-square")
+					
+					$(that).find(".ft li.active").removeClass("active");
+					$(this).addClass("active");
+					
+					$("#group-recommends").find(".groupbuy:visible").hide();
+					$("#group-recommends").find(".groupbuy").eq($(this).data("target")).show();
+				})
+				
+				$(that).find(".prev").click(function(){
+					
+					var prev = $(that).find(".ft li.active").prev();
+					
+					if(prev.size() > 0){
+						prev.click();
+					}else{
+						$(that).find(".ft li:last").click();
+					}
+					
+				})
+				
+				$(that).find(".next").click(function(){
+					
+					var next = $(that).find(".ft li.active").next();
+					
+					if(next.size() > 0){
+						next.click();
+					}else{
+						$(that).find(".ft li:first").click();
+					}
+					
+				})
+				
+				var stopped = false
+				
+				$(that).hover(function(){
+					stopped = true
+				},function(){
+					stopped = false
+				})
+				
+				window.setInterval(function(){
+					
+					if(stopped || !$(that).is(":visible")){
+					}else{
+						$(that).find(".next").click();
+					}
+				}, 10000);
+			})
+		})
+	</script>
 </body>
 </html>
