--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -64,8 +64,8 @@
 	  	<div class='headlines block'>
 	  		<div class='bd'>
 	  			{{ range .Headlines }}
-	  			<div class='headline first-headline'>
-		  			<h1><a href='{{.SURL}}'>{{.Title}}</a></h1>
+	  			<div class='headline first-headline clickable'>
+		  			<h1><a title="{{.Title}}" href='{{.SURL}}'>{{.Title}}</a></h1>
 		  			<p>{{.Brief}}</p>
 	  			</div>
 	  			{{ end}}
@@ -106,35 +106,35 @@
   					</div>
   					<ul>
   						{{ range (slice .Recommends 2 3) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 4 5) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 6 7) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 8 9) }}
-	  						<li class='group'><i class='icon-dot'></i> <a title="{{.Title}}" href='{{.SURL}}'>{{.Title}}</a></li>
+	  						<li class='group'><i class='icon-dot'></i> <a title="{{.STitle}}" href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 10 11) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 12 13) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 14 15) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 16 17) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   					</ul>
   				</div>
   				<div class='half-right'>
   					<div class='first-focus'>
 	  					{{ range (slice .Recommends 1 2) }}
-	  					<h2><a href='{{.SURL}}'>{{.Title}}</a></h2>
+	  					<h2><a href='{{.SURL}}'>{{.STitle}}</a></h2>
 	  					<p>
 	  						{{.Brief}}
 	  					</p>
@@ -143,28 +143,28 @@
   					
   					<ul>
   						{{ range (slice .Recommends 3 4) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 5 6) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 7 8) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 9 10) }}
-	  						<li class='group'><i class='icon-dot'></i> <a title="{{.Title}}" href='{{.SURL}}'>{{.Title}}</a></li>
+	  						<li class='group'><i class='icon-dot'></i> <a title="{{.STitle}}" href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 11 12) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 13 14) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 15 16) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   						{{ range (slice .Recommends 17 18) }}
-  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+  							<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{ end }}
   					</ul>
   				</div>
@@ -250,7 +250,7 @@
 	  				{{ end }} 
 	  				<br />
 	  				{{ range slice .Days 1 5}}
-	  					<p>· <a href='{{.SURL}}'>{{.Title}}</a></p>
+	  					<p>· <a href='{{.SURL}}'>{{.STitle}}</a></p>
 	  				{{ end }}
   				</div>
   				
@@ -260,7 +260,7 @@
 	  				{{ end }} 
 	  				<br />
 	  				{{ range slice .Weeks 1 5}}
-	  					<p>· <a href='{{.SURL}}'>{{.Title}}</a></p>
+	  					<p>· <a href='{{.SURL}}'>{{.STitle}}</a></p>
 	  				{{ end }}
   				</div>
   				
@@ -270,7 +270,7 @@
 	  				{{ end }} 
 	  				<br />
 	  				{{ range slice .Months 1 5}}
-	  					<p>· <a href='{{.SURL}}'>{{.Title}}</a></p>
+	  					<p>· <a href='{{.SURL}}'>{{.STitle}}</a></p>
 	  				{{ end }}
   				</div>
   				
@@ -299,20 +299,23 @@
   		<div class='hd clearfix'>
   			<h1>电商团购 <i class="icon-thumb-small">&nbsp;</i></h1>
   			<ul>
-  				<li><a href='#'>全部楼盘</a></li>
-  				<li>&nbsp;| <a href='#'>住宅</a></li>
-  				<li>&nbsp;| <a href='#'>别墅</a></li>
-  				<li>&nbsp;| <a href='#'>商铺</a></li>
-  				<li>&nbsp;| <a href='#'>写字楼</a></li>
+  				<li><a href='/newhouse/list.html'>全部楼盘</a></li>
+				{{ range $index, $usage := .Tops.Usages }}
+					<li>&nbsp;| <nobr><a href='{{queryN "/newhouse/list.html" "usage" .Value}}'>{{.Name}}</a></nobr></li>
+				{{ end }}
   			</ul>
-  			<div class='more'><a href='#'>更多</a></div>
+  			<div class='more'><a href='/newhouse/list.html'>更多</a></div>
   		</div>
   		
   		<div class='bd'>
   			{{range $i, $v := .GroupBuys}}
   			<div class='groupbuy {{if eq (mod $i 3) 2}}groupbuy-last{{end}}'>
   			
-  				<div><img src='/images/index/sample.jpg' /></div>
+  				<div>
+  				{{if and .Cover .Cover.Palm }}
+  					<img src='{{.Cover.Palm.Path}}' width=310 height=174 />
+  				{{end}}
+  				</div>
   				
   				<dl class='clearfix'>
   					<dt><h2>{{.Name}}</h2></dt>
@@ -382,167 +385,6 @@
   					</dd>
   				</dl>
   			</div>
-  			<div class='groupbuy'>
-  			
-  				<div><img src='/images/index/sample.jpg' /></div>
-  				
-  				<dl class='clearfix'>
-  					<dt><h2>承安南湖壹品</h2></dt>
-  					<dd><a class='btn' href='#'>我要团购</a></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt><h3>团购价： <span class='price'>7680</span>元/㎡</h3></dt>
-  					<dd><span class='deletion'>原价:7680元/㎡</span></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt class='discount'><i class='icon-arrow-right'>&nbsp;</i> 平均优惠7万元/套</dt>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt>
-  						<h2>
-  							<i class='icon-phone-large'>&nbsp;</i> 
-  							<span class='phone'>400-700-1234</span>
-  							转 
-  							<span class='phone'>6486</span>
-  						</h2>
-  					</dt>
-  					<dd>
-  						<div class='shape'>110人</div>
-  					</dd>
-  				</dl>
-  			</div>
-  			<div class='groupbuy groupbuy-last'>
-  			
-  				<div><img src='/images/index/sample.jpg' /></div>
-  				
-  				<dl class='clearfix'>
-  					<dt><h2>承安南湖壹品</h2></dt>
-  					<dd><a class='btn' href='#'>我要团购</a></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt><h3>团购价： <span class='price'>7680</span>元/㎡</h3></dt>
-  					<dd><span class='deletion'>原价:7680元/㎡</span></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt class='discount'><i class='icon-arrow-right'>&nbsp;</i> 平均优惠7万元/套</dt>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt>
-  						<h2>
-  							<i class='icon-phone-large'>&nbsp;</i> 
-  							<span class='phone'>400-700-1234</span>
-  							转 
-  							<span class='phone'>6486</span>
-  						</h2>
-  					</dt>
-  					<dd>
-  						<div class='shape'>110人</div>
-  					</dd>
-  				</dl>
-  			</div>
-  			<div class='groupbuy'>
-  			
-  				<div><img src='/images/index/sample.jpg' /></div>
-  				
-  				<dl class='clearfix'>
-  					<dt><h2>承安南湖壹品</h2></dt>
-  					<dd><a class='btn' href='#'>我要团购</a></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt><h3>团购价： <span class='price'>7680</span>元/㎡</h3></dt>
-  					<dd><span class='deletion'>原价:7680元/㎡</span></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt class='discount'><i class='icon-arrow-right'>&nbsp;</i> 平均优惠7万元/套</dt>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt>
-  						<h2>
-  							<i class='icon-phone-large'>&nbsp;</i> 
-  							<span class='phone'>400-700-1234</span>
-  							转 
-  							<span class='phone'>6486</span>
-  						</h2>
-  					</dt>
-  					<dd>
-  						<div class='shape'>110人</div>
-  					</dd>
-  				</dl>
-  			</div>
-  			<div class='groupbuy'>
-  			
-  				<div><img src='/images/index/sample.jpg' /></div>
-  				
-  				<dl class='clearfix'>
-  					<dt><h2>承安南湖壹品</h2></dt>
-  					<dd><a class='btn' href='#'>我要团购</a></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt><h3>团购价： <span class='price'>7680</span>元/㎡</h3></dt>
-  					<dd><span class='deletion'>原价:7680元/㎡</span></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt class='discount'><i class='icon-arrow-right'>&nbsp;</i> 平均优惠7万元/套</dt>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt>
-  						<h2>
-  							<i class='icon-phone-large'>&nbsp;</i> 
-  							<span class='phone'>400-700-1234</span>
-  							转 
-  							<span class='phone'>6486</span>
-  						</h2>
-  					</dt>
-  					<dd>
-  						<div class='shape'>110人</div>
-  					</dd>
-  				</dl>
-  			</div>
-  			<div class='groupbuy groupbuy-last'>
-  			
-  				<div><img src='/images/index/sample.jpg' /></div>
-  				
-  				<dl class='clearfix'>
-  					<dt><h2>承安南湖壹品</h2></dt>
-  					<dd><a class='btn' href='#'>我要团购</a></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt><h3>团购价： <span class='price'>7680</span>元/㎡</h3></dt>
-  					<dd><span class='deletion'>原价:7680元/㎡</span></dd>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt class='discount'><i class='icon-arrow-right'>&nbsp;</i> 平均优惠7万元/套</dt>
-  				</dl>
-  				
-  				<dl class='clearfix'>
-  					<dt>
-  						<h2>
-  							<i class='icon-phone-large'>&nbsp;</i> 
-  							<span class='phone'>400-700-1234</span>
-  							转 
-  							<span class='phone'>6486</span>
-  						</h2>
-  					</dt>
-  					<dd>
-  						<div class='shape'>110人</div>
-  					</dd>
-  				</dl>
-  			</div>
-  		</div>
   		-->
   	</div>
   </div>
@@ -559,14 +401,14 @@
   				<ul>
   					{{range slice .Leaders 0 1}}
   						{{if .Cover }}
-	  						<li class='pic'><a href='{{.SURL}}'><img src='{{.Cover.Resource.URI}}' /></a></li>
+	  						<li class='pic'><a href='{{.SURL}}'><img src='{{.Cover.Palm.URI}}' /></a></li>
   						{{else}}
-		  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+		  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{end}}
   					{{end}}
   					
   					{{range slice .Leaders 1 7}}
-	  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+	  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   					{{end}}
   					
   					<!-- 
@@ -591,9 +433,9 @@
   					{{ range slice .Locals 0 1 }}
 	  					<li>
 	  						<dl class='clearfix'>
-	  							<dd>{{ if .Cover}}<img src='{{.Cover.Resource.URI}}' />{{end}}</dd>
+	  							<dd>{{ if .Cover}}<img src='{{.Cover.Palm.URI}}' width=170 />{{end}}</dd>
 	  							<dt>
-	  								<h2 class='bold'>{{.Title}}</h2>
+	  								<h2 class='bold'>{{.STitle}}</h2>
 	  								<p style='line-height:1.25em;margin-top: 1em;'>{{.Brief}}</p>
 	  							</dt>
 	  						</dl>
@@ -601,7 +443,7 @@
   					{{ end }}
   					
   					{{ range slice .Locals 1 9 }}
-		  				<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a>
+		  				<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a>
 		  			{{ end }}
   				</ul>
   			</div>
@@ -617,14 +459,14 @@
   				<ul>
   					{{range slice .Soles 0 1}}
   						{{if .Cover }}
-	  						<li class='pic'><a href='{{.SURL}}'><img src='{{.Cover.Resource.URI}}' /></a></li>
+	  						<li class='pic'><a href='{{.SURL}}'><img src='{{.Cover.Palm.URI}}' /></a></li>
   						{{else}}
-		  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+		  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   						{{end}}
   					{{end}}
   					
   					{{range slice .Soles 1 7}}
-	  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a></li>
+	  					<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a></li>
   					{{end}}
   					
   					<!-- 
@@ -651,10 +493,15 @@
   			</div>
   			<div class='bd f13'>
   				<ul>
-  					<li class='pic'><a href='#'><img src='/images/index/sample-delivery.jpg' /></a></li>
+  					<li class='pic'>
+  					
+  						{{ range slice .Deliveries 0 1}}
+	  						<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
+  						{{end}}
+  					</li>
   					<li>
   						{{ range $i, $o := .Deliveries }}
-	  						<dl class='{{if eq $i 0}}active{{end}} clearfix'>
+	  						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clearfix clickable hoverable'>
 	  							<dd class='price'>
 	  							{{.Price}} 元/㎡
 	  							{{if equals .PriceType -1}}
@@ -719,9 +566,9 @@
 					{{ range slice .Lands 0 1 }}
 	  					<li>
 	  						<dl class='clearfix'>
-	  							<dd>{{ if .Cover}}<img src='{{.Cover.Resource.URI}}' />{{end}}</dd>
+	  							<dd>{{ if .Cover}}<img src='{{.Cover.Palm.URI}}' />{{end}}</dd>
 	  							<dt>
-	  								<h2 class='bold'>{{.Title}}</h2>
+	  								<h2 class='bold'>{{.STitle}}</h2>
 	  								<p style='line-height:1.25em;margin-top: 1em;'>{{.Brief}}</p>
 	  							</dt>
 	  						</dl>
@@ -729,7 +576,7 @@
   					{{ end }}
   					
   					{{ range slice .Lands 1 9 }}
-		  				<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.Title}}</a>
+		  				<li><i class='icon-dot'></i> <a href='{{.SURL}}'>{{.STitle}}</a>
 		  			{{ end }}
   					<!-- 
   					<li>
@@ -762,10 +609,14 @@
   			</div>
   			<div class='bd f13'>
   				<ul>
-  					<li class='pic'><a href='#'><img src='/images/index/sample-delivery.jpg' /></a></li>
+  					<li class='pic'>
+  						{{ range slice .Opens 0 1}}
+	  						<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
+  						{{end}}
+  					</li>
   					<li>
   						{{ range $i, $o := .Opens }}
-	  						<dl class='{{if eq $i 0}}active{{end}} clearfix'>
+	  						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clearfix clickable hoverable'>
 	  							<dd>{{if not (equals .OpenDate "")}}{{.OpenDate}}{{else}}{{.SOpen}}{{end}}</dd>
 	  							<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
 	  						</dl>
