--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -4,6 +4,7 @@
 <!--[if !IE]><!-->
 <html>
 <!--<![endif]-->
+{{template "lib"}}
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>嘉兴房产团购 | 系统管理</title>
